welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: '=' expected but ';' found.
  if (estSurBiscuit) {
^Program:6: error: illegal start of simple pattern
  for(case <- 1 to 6){
      ^Program:14: error: '<-' expected but '}' found.
} 
^